added awesome txt file

--- a/semana 1/martes/fixed_navigation_files/reto.html
+++ b/semana 1/martes/fixed_navigation_files/reto.html
@@ -19,10 +19,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
+  <div id="wrapper">
+  <div class="top">
+      <img id="logo" src="codea-logo.png">
+  </div>
   <div class="top-nav">
     <div class="container">
       <nav>
-        <img id="logo" src="codea-logo.png" width="150" height="46">
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Nosotros</a></li>
@@ -149,6 +152,7 @@ consequat.</p>
       <strong><i>Derechos &copy; 2015 Lorem S.A. de C.V</i></strong>
     </div>
   </div>
+    </div>
     <!-- Aquí va tu javascript -->
   <script type="text/javascript" src="navbar.js"></script>
 </body>
