some more css tasks complete

--- a/semana 3/jueves/Diseñando la Forma/product.html
+++ b/semana 3/jueves/Diseñando la Forma/product.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Mi Gran App</h1>
+      <img src="codea-logo.png">
     </header>
     <nav>
       <ul>
@@ -31,11 +31,10 @@
       <h2>Regístrate te va a encantar esta aplicación</h2>
       <div id="registration">
         <form name="sign_up" action="#" method="post">
-          <label for="email">Email</label>
           <input id="registration_email" type="text" name="email" placeholder="Email">
-          <label for="password">Password</label>
-          <input id="registration_password" type="password" name="password" placeholder="Password">
-
+          <input id="registration_password" type="password" name="password" placeholder="Password"><br>
+          <textarea placeholder="Cuales son tus dudas?"></textarea>
+          <input type="tel" name="telephone" placeholder="Tel.">
           <button id="registration_btn" type="submit">Sign Up</button>
         </form>
       </div>
