--- a/semana 3/jueves/Navegando en una Página/product.html
+++ b/semana 3/jueves/Navegando en una Página/product.html
@@ -20,11 +20,11 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Que Hacemos</a></li>   
-        <li><a href="#">Precios</a></li>
-        <li><a href="#">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="#buzz">Inicio</a></li>
+        <li><a href="#que_hacemos">Que Hacemos</a></li>   
+        <li><a href="#pricing">Precios</a></li>
+        <li><a href="#about">Nosotros</a></li>
+        <li><a href="#contact">Contacto</a></li>
       </ul>
       <br clear="all">
     </nav>
