--- a/semana 3/viernes/Dos Columnas/product.html
+++ b/semana 3/viernes/Dos Columnas/product.html
@@ -29,7 +29,7 @@
       <br clear="all">
     </nav>
     <div class="content">
-      <div id="buzz">
+      <div id="buzz" class="section">
         <h3>Información Relevante:</h3>
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -45,78 +45,41 @@
       </blockquote>
     </blockquote>
   </div>
-  <div id="que_hacemos">
+      
+  <div id="que_hacemos" class="section">
     <h2>Que Hacemos</h2>
     <h3>Algunos de nuestros productos son:</h3>
     <div class="feature">
+      <div class="column">
       <h4>OOO</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        </div>
+      <div class="column">
       <img src="https://codealab.files.wordpress.com/2015/06/image_4.jpg">
+        </div>
     </div>
     <div class="feature">
+      <div class="column">
+      <img src="https://codealab.files.wordpress.com/2015/06/image_2.jpg">
+      </div>
+      <div class="column">
       <h4>UUU</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
-      <img src="https://codealab.files.wordpress.com/2015/06/image_2.jpg">
+      </div>
+
     </div>
     <div class="feature">
+      <div class="column">
       <h4>RRR</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+      </div>
+      <div class="column">
       <img src="https://codealab.files.wordpress.com/2015/06/image_1.png">
+      </div>
     </div>
-  </div>
-  <div id="pricing">
-    <h2>Precios</h2>
-    <div class="pricing_features">
-      <h5>Básico [$45.56 varos]</h5>
-      <ul class="pricing_features">
-        <li>Algo increíble</li>
-        <li>Algo más increíble</li>
-        <li>Algo que te maravillará</li>
-      </ul>
-    </div>
-    <div class="pricing_features">
-      <h5>Pro [$800.34 varos]</h5>
-      <ul class="pricing_features">
-        <li>Algo increíble</li>
-        <li>Algo más increíble</li>
-        <li>Algo que te maravillará</li>
-      </ul>
-    </div>
-    <div class="pricing_features">
-      <h5>Platinum [$1000.5 varos]</h5>
-      <ul>
-        <li>Algo increíble</li>
-        <li>Algo más increíble</li>
-        <li>Algo que te maravillará</li>
-      </ul>
-    </div>
-  </div>
-  <div id="about">
-    <h2>Nosotros</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
-  </div>
-  <div id="contact">
-    <h2>Contacto</h2>
-    <table>
-      <tbody>
-        <tr>
-          <td>Email</td>
-          <td>mail@company.com</td>
-        </tr>
-        <tr>
-          <td>Twitter</td>
-          <td>@twitter_handle</td>
-        </tr>
-        <tr>
-          <td>Teléfono</td>
-          <td>55-0984-0298</td>
-        </tr>
-      </tbody>
-    </table>
   </div>
 </div>
 <div class="footer">
