--- a/semana 4/miercoles/Barra tipo boton/product.html
+++ b/semana 4/miercoles/Barra tipo boton/product.html
@@ -20,11 +20,11 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#">Inicio</a></li>
+        <li class="first"><a href="#">Inicio</a></li>
         <li><a href="#">Que Hacemos</a></li>   
         <li><a href="#">Precios</a></li>
         <li><a href="#">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li class="last"><a href="#">Contacto</a></li>
       </ul>
       <br clear="all">
     </nav>
